--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
