--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "mongoose": "^6.0.13",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
