--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@/api/*": ["pages/api/*"],
       "@/models/*": ["models/*"],
       "@/types/*": ["types/*"],
-      "@/utils/*": ["utils/*"]
+      "@/utils/*": ["utils/*"],
+      "@/hooks/*": ["hooks/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
