--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie": "^0.4.1",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "16.11.6",
     "@types/react": "17.0.34",
     "autoprefixer": "^10.4.0",
